# recycling_box_1

./: README.md  Untitled Diagr11am.drawio  Untitled Diagram.drawio
_includes/: 1.html
ardunio/: check_servo.txt  ultra_and_servo.txt  ultransonic_for_garbage_full.txt  ultrasonic_for_init_main.txt
cpp_main/code_v1/: compile  main.cpp
main/: CMakeLists.txt  main.cpp
models/: coco_labels.txt
recycle_firmware/firmware/: firmware.ino
